--- a/app/src/main/res/menu/opcions_menu.xml
+++ b/app/src/main/res/menu/opcions_menu.xml
@@ -23,7 +23,7 @@
     <item
         android:id="@+id/Salir"
         android:title="Cerrar Cuenta"
-        android:background="#E53935"
+        android:titleTextColor="@android:color/holo_red_dark"
         />
 
 </menu>
