--- a/app/src/main/res/layout/activity_abc_academia.xml
+++ b/app/src/main/res/layout/activity_abc_academia.xml
@@ -10,10 +10,15 @@
     <Spinner
         android:id="@+id/spinerAcademia"
         android:layout_width="375dp"
-        android:layout_height="43dp"
+        android:layout_height="60dp"
         android:layout_marginTop="24dp"
+        android:background="@drawable/customspiner"
+        android:textColor="@color/black"
+
         app:layout_constraintTop_toTopOf="@+id/guideline5"
-        tools:layout_editor_absoluteX="16dp" />
+        tools:layout_editor_absoluteX="16dp"
+
+        />
 
     <Button
         android:id="@+id/btnAceptar"
@@ -28,26 +33,33 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="163dp"
+        android:layout_width="180dp"
         android:layout_height="52dp"
-        android:layout_marginTop="76dp"
-        android:text="NOMBRE"
+        android:layout_marginTop="68dp"
+        android:text="ACADEMIA"
         android:textSize="34sp"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.447"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/etIDacademia"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="84dp"
+        android:layout_width="267dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="56dp"
+        android:background="@drawable/custumimput"
+        android:drawableStart="@drawable/idform"
         android:ems="10"
         android:hint="ID"
         android:inputType="textPersonName"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
+
+        android:textColor="@color/black"
+        android:textColorHint="#000000"
         app:layout_constraintEnd_toEndOf="@+id/textView2"
-        app:layout_constraintHorizontal_bias="0.468"
+        app:layout_constraintHorizontal_bias="0.471"
         app:layout_constraintStart_toStartOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -67,17 +79,38 @@
 
     <EditText
         android:id="@+id/etCodigo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="267dp"
+        android:layout_height="56dp"
         android:layout_marginBottom="48dp"
+        android:background="@drawable/custumimput"
+        android:drawableStart="@drawable/user"
         android:ems="10"
         android:hint="Codigo"
         android:inputType="textPersonName"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
+        android:textColor="@color/black"
+        android:textColorHint="#000000"
+
         app:layout_constraintBottom_toTopOf="@+id/guideline5"
         app:layout_constraintEnd_toEndOf="@+id/etIDacademia"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/etIDacademia"
         app:layout_constraintTop_toBottomOf="@+id/etIDacademia"
-        app:layout_constraintVertical_bias="0.885" />
+        app:layout_constraintVertical_bias="0.6" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="20dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
