--- a/app/src/main/res/layout/activity_abc_aulas.xml
+++ b/app/src/main/res/layout/activity_abc_aulas.xml
@@ -14,19 +14,28 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:text="#Aulas"
-        android:textSize="24sp"
+        android:textSize="40sp"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/edNombreAula"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+
+        android:layout_width="267dp"
+        android:layout_height="56dp"
         android:layout_marginBottom="492dp"
+        android:background="@drawable/custumimput"
+        android:drawableStart="@drawable/user"
         android:ems="10"
         android:hint="Nombre Aula"
         android:inputType="textPersonName"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
+
+        android:textColor="@color/black"
+        android:textColorHint="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/Logingtv"
         app:layout_constraintHorizontal_bias="0.503"
@@ -36,31 +45,44 @@
 
     <Spinner
         android:id="@+id/spinerAula"
-        android:layout_width="409dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
-        app:layout_constraintTop_toTopOf="@+id/guideline4"
-        tools:layout_editor_absoluteX="1dp" />
+        android:layout_width="375dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/customspiner"
+
+
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline4" />
 
     <Button
         android:id="@+id/btnAceptarAu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_width="149dp"
+        android:layout_height="58dp"
+        android:layout_marginTop="60dp"
         android:text="Aceptar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinerAula" />
+        app:layout_constraintTop_toBottomOf="@+id/spinerAula"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/edIDAula"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="267dp"
+        android:layout_height="56dp"
         android:layout_marginBottom="68dp"
+        android:background="@drawable/custumimput"
+        android:drawableStart="@drawable/idform"
         android:ems="10"
         android:hint="ID Aula"
         android:inputType="textPersonName"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
+
+        android:textColor="@color/black"
+        android:textColorHint="#000000"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintEnd_toEndOf="@+id/edNombreAula"
         app:layout_constraintHorizontal_bias="0.0"
@@ -74,4 +96,11 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.623803" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
 </androidx.constraintlayout.widget.ConstraintLayout>
