--- a/app/src/main/res/layout/activity_abc_maestros.xml
+++ b/app/src/main/res/layout/activity_abc_maestros.xml
@@ -25,7 +25,7 @@
         app:layout_constraintTop_toTopOf="parent"
 
         android:background="@drawable/custumimput"
-        android:drawableStart="@drawable/user"
+        android:drawableStart="@drawable/idform"
         android:paddingStart="12dp"
         android:paddingEnd="12dp"
         android:textColor="@color/black"
@@ -53,7 +53,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtId" />
+        app:layout_constraintTop_toBottomOf="@+id/txtId"
+        />
 
     <EditText
         android:id="@+id/txtApellidos"
@@ -92,6 +93,7 @@
 
         android:textColor="@color/black"
         android:background="@drawable/customspiner"
+
         />
 
     <Spinner
