--- a/app/src/main/res/layout/activity_reporte_semanal.xml
+++ b/app/src/main/res/layout/activity_reporte_semanal.xml
@@ -15,7 +15,10 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="52dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnreporte" />
+        app:layout_constraintTop_toBottomOf="@+id/btnreporte"
+
+        android:background="@drawable/customspiner"
+        android:textColor="@color/black"/>
 
     <Spinner
         android:id="@+id/spAccion5"
@@ -25,7 +28,10 @@
         app:layout_constraintBottom_toBottomOf="@+id/spAccion4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/spAccion4"
-        app:layout_constraintTop_toTopOf="@+id/spAccion4" />
+        app:layout_constraintTop_toTopOf="@+id/spAccion4"
+
+        android:background="@drawable/customspiner"
+        android:textColor="@color/black"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
