--- a/app/src/main/res/layout/activity_abc_carrera.xml
+++ b/app/src/main/res/layout/activity_abc_carrera.xml
@@ -100,7 +100,7 @@
         app:layout_constraintVertical_bias="0.206"
 
         android:background="@drawable/custumimput"
-        android:drawableStart="@drawable/user"
+        android:drawableStart="@drawable/idform"
         android:paddingStart="12dp"
         android:paddingEnd="12dp"
         android:textColor="@color/black"
