--- a/app/src/main/res/layout/activity_abc_maestros.xml
+++ b/app/src/main/res/layout/activity_abc_maestros.xml
@@ -115,12 +115,15 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="30dp"
-        android:backgroundTint="#4CAF50"
         android:hint="GUARDAR CAMBIOS"
-        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spAcademia" />
+        app:layout_constraintTop_toBottomOf="@+id/spAcademia"
+
+        android:backgroundTint="#28E2E8"
+        android:textColor="@color/black"
+        android:textSize="20dp"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
