--- a/app/src/main/res/drawable/custombutton.xml
+++ b/app/src/main/res/drawable/custombutton.xml
@@ -1,8 +1,14 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <corners android:radius="25dp" />
-    <gradient
-        android:startColor="#8E3737"
-        android:endColor="#E8A9A9"
-        android:angle="270" />
-</shape>
+
+<selector xmlns:android="http://schemas.android.com/apk/res/android" >
+    <item >
+        <shape android:shape="rectangle"  >
+            <corners android:radius="50dip" />
+            <stroke android:width="3dip" android:color="#F3EBEB" />
+            <solid android:color="#1BECDA" />
+
+
+            <!--<gradient android:angle="-90" android:startColor="#DD2C00" android:endColor="#FFAB00" />-->
+
+        </shape>
+    </item>
+</selector>
