--- a/app/src/main/res/layout/activity_abc_aulas.xml
+++ b/app/src/main/res/layout/activity_abc_aulas.xml
@@ -66,7 +66,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinerAula"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+
+        android:backgroundTint="#28E2E8"
+        android:textColor="@color/black"
+        android:textSize="20dp"/>
 
     <EditText
         android:id="@+id/edIDAula"
