--- a/app/src/main/res/layout/activity_inicio_de_sesion.xml
+++ b/app/src/main/res/layout/activity_inicio_de_sesion.xml
@@ -66,15 +66,17 @@
         android:id="@+id/btnInicarSesion"
         android:layout_width="245dp"
         android:layout_height="50dp"
-        android:background="@drawable/custombutton"
         android:text="Iniciar sesión"
-        android:textColor="#fff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/EdContraseña"
         app:layout_constraintHorizontal_bias="0.549"
         app:layout_constraintStart_toStartOf="@+id/EdContraseña"
         app:layout_constraintTop_toBottomOf="@+id/EdContraseña"
         app:layout_constraintVertical_bias="0.22"
+        android:backgroundTint="@color/white"
+        android:background="@drawable/custombutton"
+
+
 
         />
 
