--- a/app/src/main/res/layout/activity_abc_aulas.xml
+++ b/app/src/main/res/layout/activity_abc_aulas.xml
@@ -14,8 +14,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:text="#Aulas"
-        android:textSize="40sp"
         android:textColor="@color/white"
+        android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -38,7 +38,6 @@
         android:textColorHint="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/Logingtv"
-        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="@+id/Logingtv"
         app:layout_constraintTop_toBottomOf="@+id/Logingtv"
         app:layout_constraintVertical_bias="1.0" />
@@ -48,12 +47,12 @@
         android:layout_width="375dp"
         android:layout_height="60dp"
         android:layout_marginTop="48dp"
-        android:layout_marginEnd="16dp"
         android:background="@drawable/customspiner"
 
 
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline4" />
 
     <Button
@@ -61,16 +60,16 @@
         android:layout_width="149dp"
         android:layout_height="58dp"
         android:layout_marginTop="60dp"
+        android:backgroundTint="#28E2E8"
         android:text="Aceptar"
+        android:textColor="@color/black"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinerAula"
-        app:layout_constraintVertical_bias="0.0"
-
-        android:backgroundTint="#28E2E8"
-        android:textColor="@color/black"
-        android:textSize="20dp"/>
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/edIDAula"
@@ -92,7 +91,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/edNombreAula"
         app:layout_constraintTop_toBottomOf="@+id/edNombreAula"
-        app:layout_constraintVertical_bias="0.634" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline4"
@@ -107,4 +106,5 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.5" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
