--- a/app/src/main/res/layout/activity_chequeo_clases.xml
+++ b/app/src/main/res/layout/activity_chequeo_clases.xml
@@ -8,4 +8,164 @@
 
     tools:context=".chequeoClases">
 
+    <Spinner
+        android:id="@+id/SpAula"
+        android:layout_width="273dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/customspiner"
+        app:layout_constraintEnd_toEndOf="@+id/textView3"
+        app:layout_constraintHorizontal_bias="0.411"
+
+        app:layout_constraintStart_toStartOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/etclases" />
+
+    <Spinner
+        android:id="@+id/SpHORA"
+        android:layout_width="273dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="44dp"
+        app:layout_constraintEnd_toEndOf="@+id/SpAula"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/SpAula"
+        app:layout_constraintTop_toBottomOf="@+id/SpAula"
+
+        android:background="@drawable/customspiner"
+        />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="CHECAR CLASE"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="41dp"
+        android:layout_height="38dp"
+        android:layout_marginTop="92dp"
+        android:text="ID:"
+        android:textColor="@color/design_default_color_on_primary"
+        android:textSize="24sp"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.138"
+        app:layout_constraintStart_toStartOf="parent"
+
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="85dp"
+        android:layout_height="49dp"
+        android:text="AULA:"
+        android:textColor="@color/design_default_color_on_primary"
+
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="@+id/SpAula"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.049"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/SpAula" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="85dp"
+        android:layout_height="49dp"
+        android:text="HORA:"
+        android:textColor="@color/design_default_color_on_primary"
+
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="@+id/SpHORA"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.049"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/SpHORA" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="119dp"
+        android:layout_height="39dp"
+
+        android:layout_marginTop="420dp"
+        android:text="OPCION:"
+        android:textColor="@color/design_default_color_on_primary"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.421"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="119dp"
+        android:layout_height="39dp"
+
+        android:text="DOCENTE:"
+        android:textColor="@color/design_default_color_on_primary"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="@+id/SpDocente"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.013"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/SpDocente" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
+
+    <Spinner
+        android:id="@+id/SpDocente"
+        android:layout_width="246dp"
+        android:layout_height="44dp"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/customspiner"
+        app:layout_constraintEnd_toEndOf="@+id/SpHORA"
+        app:layout_constraintHorizontal_bias="0.777"
+        app:layout_constraintStart_toStartOf="@+id/SpHORA"
+
+        app:layout_constraintTop_toBottomOf="@+id/SpHORA" />
+
+    <Spinner
+        android:id="@+id/SpAction"
+        android:layout_width="346dp"
+        android:layout_height="47dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="470dp"
+
+        android:background="@drawable/customspiner"
+        />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="197dp"
+        android:layout_height="56dp"
+        android:text="GUARDAR"
+        android:textSize="25dp"
+        tools:layout_editor_absoluteX="94dp"
+        tools:layout_editor_absoluteY="588dp" />
+
+    <EditText
+        android:id="@+id/etclases"
+        android:layout_width="267dp"
+        android:layout_height="56dp"
+        android:layout_marginEnd="24dp"
+        android:background="@drawable/custumimput"
+        android:drawableStart="@drawable/idform"
+        android:ems="10"
+        android:hint="ID"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toBottomOf="@+id/textView4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textView4" />
 </androidx.constraintlayout.widget.ConstraintLayout>
