--- a/app/src/main/res/layout/activity_chequeo_clases.xml
+++ b/app/src/main/res/layout/activity_chequeo_clases.xml
@@ -27,13 +27,12 @@
         android:layout_width="273dp"
         android:layout_height="50dp"
         android:layout_marginTop="44dp"
+        android:background="@drawable/customspiner"
         app:layout_constraintEnd_toEndOf="@+id/SpAula"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/SpAula"
-        app:layout_constraintTop_toBottomOf="@+id/SpAula"
 
-        android:background="@drawable/customspiner"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/SpAula" />
 
     <TextView
         android:id="@+id/textView3"
@@ -94,14 +93,14 @@
         android:layout_width="119dp"
         android:layout_height="39dp"
 
-        android:layout_marginTop="420dp"
         android:text="OPCION:"
         android:textColor="@color/design_default_color_on_primary"
         android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.421"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/SpAction"
+        app:layout_constraintEnd_toEndOf="@+id/SpAction"
+        app:layout_constraintHorizontal_bias="0.466"
+        app:layout_constraintStart_toStartOf="@+id/SpAction"
+        app:layout_constraintTop_toBottomOf="@+id/SpDocente" />
 
     <TextView
         android:id="@+id/textView8"
@@ -140,12 +139,13 @@
         android:id="@+id/SpAction"
         android:layout_width="346dp"
         android:layout_height="47dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="470dp"
-
+        android:layout_marginBottom="48dp"
         android:background="@drawable/customspiner"
-        />
+        app:layout_constraintBottom_toTopOf="@+id/guideline11"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.615"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/button"
@@ -153,8 +153,10 @@
         android:layout_height="56dp"
         android:text="GUARDAR"
         android:textSize="25dp"
-        tools:layout_editor_absoluteX="94dp"
-        tools:layout_editor_absoluteY="588dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline11" />
 
     <EditText
         android:id="@+id/etclases"
@@ -169,4 +171,11 @@
         app:layout_constraintBottom_toBottomOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView4" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.8440493" />
 </androidx.constraintlayout.widget.ConstraintLayout>
