--- a/app/src/main/res/layout/activity_chequeo_clases.xml
+++ b/app/src/main/res/layout/activity_chequeo_clases.xml
@@ -148,7 +148,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnguardarclase"
         android:layout_width="197dp"
         android:layout_height="56dp"
         android:text="GUARDAR"
