--- a/app/src/main/res/layout/activity_abc_academia.xml
+++ b/app/src/main/res/layout/activity_abc_academia.xml
@@ -14,9 +14,7 @@
         android:layout_marginTop="24dp"
         android:background="@drawable/customspiner"
         android:textColor="@color/black"
-
         app:layout_constraintEnd_toEndOf="parent"
-
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline5" />
 
@@ -39,11 +37,12 @@
         android:id="@+id/textView2"
         android:layout_width="180dp"
         android:layout_height="52dp"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="28dp"
         android:text="ACADEMIA"
-        android:textSize="34sp"
         android:textColor="@color/white"
+        android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -51,20 +50,19 @@
         android:id="@+id/etIDacademia"
         android:layout_width="267dp"
         android:layout_height="56dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="104dp"
         android:background="@drawable/custumimput"
         android:drawableStart="@drawable/idform"
         android:ems="10"
         android:hint="ID"
         android:inputType="textPersonName"
         android:paddingStart="12dp"
-        android:paddingEnd="12dp"
 
+        android:paddingEnd="12dp"
         android:textColor="@color/black"
         android:textColorHint="#000000"
-        app:layout_constraintEnd_toEndOf="@+id/textView2"
-        app:layout_constraintHorizontal_bias="0.471"
-        app:layout_constraintStart_toStartOf="@+id/textView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -97,11 +95,10 @@
         android:textColorHint="#000000"
 
         app:layout_constraintBottom_toTopOf="@+id/guideline5"
-        app:layout_constraintEnd_toEndOf="@+id/etIDacademia"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/etIDacademia"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etIDacademia"
-        app:layout_constraintVertical_bias="0.6" />
+        app:layout_constraintVertical_bias="0.581" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline7"
