--- a/app/src/main/res/layout/activity_abc_aulas.xml
+++ b/app/src/main/res/layout/activity_abc_aulas.xml
@@ -12,8 +12,8 @@
         android:id="@+id/Logingtv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:text="#Aulas"
+        android:layout_marginTop="24dp"
+        android:text="Aulas"
         android:textColor="@color/white"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -105,6 +105,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.5" />
+        app:layout_constraintGuide_begin="206dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
