--- a/app/src/main/res/layout/activity_chequeo_clases.xml
+++ b/app/src/main/res/layout/activity_chequeo_clases.xml
@@ -5,7 +5,6 @@
     android:id="@+id/chequeoClases"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     android:background="@drawable/f4"
     tools:context=".chequeoClases">
 
@@ -18,7 +17,6 @@
         android:background="@drawable/customspiner"
         app:layout_constraintEnd_toEndOf="@+id/textView3"
         app:layout_constraintHorizontal_bias="0.411"
-
         app:layout_constraintStart_toStartOf="@+id/textView3"
         app:layout_constraintTop_toBottomOf="@+id/etclases" />
 
@@ -96,11 +94,19 @@
         android:text="OPCION:"
         android:textColor="@color/design_default_color_on_primary"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/SpAction"
-        app:layout_constraintEnd_toEndOf="@+id/SpAction"
-        app:layout_constraintHorizontal_bias="0.466"
-        app:layout_constraintStart_toStartOf="@+id/SpAction"
-        app:layout_constraintTop_toBottomOf="@+id/SpDocente" />
+        app:layout_constraintBottom_toBottomOf="@+id/SpAction"
+        app:layout_constraintTop_toTopOf="@+id/SpAction"
+        tools:layout_editor_absoluteX="1dp" />
+
+    <Spinner
+        android:id="@+id/SpAction"
+        android:layout_width="279dp"
+        android:layout_height="46dp"
+        android:layout_marginBottom="64dp"
+        android:background="@drawable/customspiner"
+        app:layout_constraintBottom_toTopOf="@+id/guideline11"
+
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/textView8"
@@ -135,28 +141,20 @@
 
         app:layout_constraintTop_toBottomOf="@+id/SpHORA" />
 
-    <Spinner
-        android:id="@+id/SpAction"
-        android:layout_width="346dp"
-        android:layout_height="47dp"
-        android:layout_marginBottom="48dp"
-        android:background="@drawable/customspiner"
-        app:layout_constraintBottom_toTopOf="@+id/guideline11"
-
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.615"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <Button
         android:id="@+id/btnguardarclase"
-        android:layout_width="197dp"
-        android:layout_height="56dp"
+        android:layout_width="351dp"
+        android:layout_height="63dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:backgroundTint="#28E2E8"
         android:text="GUARDAR"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline11" />
+        app:layout_constraintTop_toTopOf="@+id/guideline11"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/etclases"
