--- a/app/src/main/res/layout/activity_chequeo_clases.xml
+++ b/app/src/main/res/layout/activity_chequeo_clases.xml
@@ -5,6 +5,7 @@
     android:id="@+id/chequeoClases"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     android:background="@drawable/f4"
     tools:context=".chequeoClases">
 
@@ -17,6 +18,7 @@
         android:background="@drawable/customspiner"
         app:layout_constraintEnd_toEndOf="@+id/textView3"
         app:layout_constraintHorizontal_bias="0.411"
+
         app:layout_constraintStart_toStartOf="@+id/textView3"
         app:layout_constraintTop_toBottomOf="@+id/etclases" />
 
@@ -25,12 +27,13 @@
         android:layout_width="273dp"
         android:layout_height="50dp"
         android:layout_marginTop="44dp"
-        android:background="@drawable/customspiner"
         app:layout_constraintEnd_toEndOf="@+id/SpAula"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/SpAula"
+        app:layout_constraintTop_toBottomOf="@+id/SpAula"
 
-        app:layout_constraintTop_toBottomOf="@+id/SpAula" />
+        android:background="@drawable/customspiner"
+        />
 
     <TextView
         android:id="@+id/textView3"
@@ -91,22 +94,14 @@
         android:layout_width="119dp"
         android:layout_height="39dp"
 
+        android:layout_marginTop="420dp"
         android:text="OPCION:"
         android:textColor="@color/design_default_color_on_primary"
         android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/SpAction"
-        app:layout_constraintTop_toTopOf="@+id/SpAction"
-        tools:layout_editor_absoluteX="1dp" />
-
-    <Spinner
-        android:id="@+id/SpAction"
-        android:layout_width="279dp"
-        android:layout_height="46dp"
-        android:layout_marginBottom="64dp"
-        android:background="@drawable/customspiner"
-        app:layout_constraintBottom_toTopOf="@+id/guideline11"
-
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.421"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView8"
@@ -141,20 +136,25 @@
 
         app:layout_constraintTop_toBottomOf="@+id/SpHORA" />
 
-    <Button
-        android:id="@+id/btnguardarclase"
-        android:layout_width="351dp"
-        android:layout_height="63dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:backgroundTint="#28E2E8"
-        android:text="GUARDAR"
-        android:textSize="25dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <Spinner
+        android:id="@+id/SpAction"
+        android:layout_width="346dp"
+        android:layout_height="47dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline11"
-        app:layout_constraintVertical_bias="0.0" />
+        tools:layout_editor_absoluteY="470dp"
+
+        android:background="@drawable/customspiner"
+        />
+
+    <Button
+        android:id="@+id/btnguardarclase"
+        android:layout_width="197dp"
+        android:layout_height="56dp"
+        android:text="GUARDAR"
+        android:textSize="25dp"
+        tools:layout_editor_absoluteX="150dp"
+        tools:layout_editor_absoluteY="588dp" />
 
     <EditText
         android:id="@+id/etclases"
@@ -169,11 +169,4 @@
         app:layout_constraintBottom_toBottomOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView4" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.8440493" />
 </androidx.constraintlayout.widget.ConstraintLayout>
