DISEÑO A PANTALLAS CHEQUEO

--- a/app/src/main/res/layout/activity_chequeo_clases.xml
+++ b/app/src/main/res/layout/activity_chequeo_clases.xml
@@ -27,13 +27,12 @@
         android:layout_width="273dp"
         android:layout_height="50dp"
         android:layout_marginTop="44dp"
+        android:background="@drawable/customspiner"
         app:layout_constraintEnd_toEndOf="@+id/SpAula"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/SpAula"
-        app:layout_constraintTop_toBottomOf="@+id/SpAula"
 
-        android:background="@drawable/customspiner"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/SpAula" />
 
     <TextView
         android:id="@+id/textView3"
@@ -91,17 +90,17 @@
 
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="119dp"
-        android:layout_height="39dp"
+        android:layout_width="126dp"
+        android:layout_height="51dp"
 
-        android:layout_marginTop="420dp"
         android:text="OPCION:"
         android:textColor="@color/design_default_color_on_primary"
         android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="@+id/SpAction"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.421"
+        app:layout_constraintHorizontal_bias="0.054"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/SpAction" />
 
     <TextView
         android:id="@+id/textView8"
@@ -138,23 +137,31 @@
 
     <Spinner
         android:id="@+id/SpAction"
-        android:layout_width="346dp"
-        android:layout_height="47dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="470dp"
-
+        android:layout_width="221dp"
+        android:layout_height="49dp"
+        android:layout_marginTop="60dp"
         android:background="@drawable/customspiner"
-        />
+        app:layout_constraintBottom_toTopOf="@+id/guideline13"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.873"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/SpDocente"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btnguardarclase"
-        android:layout_width="197dp"
-        android:layout_height="56dp"
+        android:layout_width="249dp"
+        android:layout_height="68dp"
+        android:layout_marginTop="44dp"
         android:text="GUARDAR"
         android:textSize="25dp"
-        tools:layout_editor_absoluteX="150dp"
-        tools:layout_editor_absoluteY="588dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.471"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline13"
+        app:layout_constraintVertical_bias="0.333" />
 
     <EditText
         android:id="@+id/etclases"
@@ -169,4 +176,11 @@
         app:layout_constraintBottom_toBottomOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView4" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline13"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.76" />
 </androidx.constraintlayout.widget.ConstraintLayout>
