--- a/app/src/main/res/layout/activity_inicio_de_sesion.xml
+++ b/app/src/main/res/layout/activity_inicio_de_sesion.xml
@@ -51,9 +51,9 @@
         android:drawableStart="@drawable/password"
         android:ems="10"
         android:hint="Ingresa Contraseña"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:minHeight="48dp"
-        android:paddingStart="12dp"
+        android:paddingStart="16dp"
         android:paddingEnd="12dp"
         android:textColor="@color/black"
         android:textColorHint="#000000"
