--- a/app/src/main/res/layout/activity_chequeo_clases.xml
+++ b/app/src/main/res/layout/activity_chequeo_clases.xml
@@ -27,12 +27,13 @@
         android:layout_width="273dp"
         android:layout_height="50dp"
         android:layout_marginTop="44dp"
-        android:background="@drawable/customspiner"
         app:layout_constraintEnd_toEndOf="@+id/SpAula"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/SpAula"
+        app:layout_constraintTop_toBottomOf="@+id/SpAula"
 
-        app:layout_constraintTop_toBottomOf="@+id/SpAula" />
+        android:background="@drawable/customspiner"
+        />
 
     <TextView
         android:id="@+id/textView3"
@@ -90,17 +91,17 @@
 
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="126dp"
-        android:layout_height="51dp"
+        android:layout_width="119dp"
+        android:layout_height="39dp"
 
+        android:layout_marginTop="420dp"
         android:text="OPCION:"
         android:textColor="@color/design_default_color_on_primary"
         android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/SpAction"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.054"
+        app:layout_constraintHorizontal_bias="0.421"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/SpAction" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView8"
@@ -137,31 +138,25 @@
 
     <Spinner
         android:id="@+id/SpAction"
-        android:layout_width="221dp"
-        android:layout_height="49dp"
-        android:layout_marginTop="60dp"
+        android:layout_width="346dp"
+        android:layout_height="47dp"
+        android:layout_marginBottom="24dp"
         android:background="@drawable/customspiner"
-        app:layout_constraintBottom_toTopOf="@+id/guideline13"
+        app:layout_constraintBottom_toTopOf="@+id/guideline11"
 
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.873"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/SpDocente"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintHorizontal_bias="0.615"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btnguardarclase"
-        android:layout_width="249dp"
-        android:layout_height="68dp"
-        android:layout_marginTop="44dp"
+        android:layout_width="197dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="36dp"
         android:text="GUARDAR"
         android:textSize="25dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.471"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline13"
-        app:layout_constraintVertical_bias="0.333" />
+        app:layout_constraintTop_toTopOf="@+id/guideline11"
+        tools:layout_editor_absoluteX="148dp" />
 
     <EditText
         android:id="@+id/etclases"
@@ -178,9 +173,9 @@
         app:layout_constraintTop_toTopOf="@+id/textView4" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline13"
+        android:id="@+id/guideline11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.76" />
+        app:layout_constraintGuide_percent="0.77017784" />
 </androidx.constraintlayout.widget.ConstraintLayout>
