--- a/app/src/main/res/layout/activity_chequeo_clases.xml
+++ b/app/src/main/res/layout/activity_chequeo_clases.xml
@@ -95,7 +95,7 @@
         android:layout_height="39dp"
 
         android:layout_marginTop="420dp"
-        android:text="OPCION:"
+        android:text="OPCION DE CLASE:"
         android:textColor="@color/design_default_color_on_primary"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
