--- a/app/src/main/res/layout/activity_inicio_de_sesion.xml
+++ b/app/src/main/res/layout/activity_inicio_de_sesion.xml
@@ -53,6 +53,9 @@
         android:hint="Ingresa Contraseña"
         android:inputType="textPassword"
         app:endIconMode="password_toggle"
+        app:passwordToggleEnabled = "true"
+    android:drawableEnd="@drawable/passwordvisible"
+
         android:paddingStart="16dp"
         android:paddingEnd="12dp"
         android:textColor="@color/black"
