--- a/app/src/main/res/layout/activity_reporte_semanal.xml
+++ b/app/src/main/res/layout/activity_reporte_semanal.xml
@@ -9,7 +9,7 @@
     tools:context=".ReporteSemanal">
 
     <Spinner
-        android:id="@+id/spAccion4"
+        android:id="@+id/SpHora"
         android:layout_width="177dp"
         android:layout_height="40dp"
         android:layout_marginStart="16dp"
@@ -21,14 +21,14 @@
         android:textColor="@color/black"/>
 
     <Spinner
-        android:id="@+id/spAccion5"
+        android:id="@+id/Spaction"
         android:layout_width="177dp"
         android:layout_height="40dp"
         android:layout_marginEnd="16dp"
-        app:layout_constraintBottom_toBottomOf="@+id/spAccion4"
+        app:layout_constraintBottom_toBottomOf="@+id/SpHora"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/spAccion4"
-        app:layout_constraintTop_toTopOf="@+id/spAccion4"
+        app:layout_constraintStart_toEndOf="@+id/SpHora"
+        app:layout_constraintTop_toTopOf="@+id/SpHora"
 
         android:background="@drawable/customspiner"
         android:textColor="@color/black"/>
