--- a/app/src/main/res/layout/activity_abc_carrera.xml
+++ b/app/src/main/res/layout/activity_abc_carrera.xml
@@ -81,7 +81,6 @@
         android:textColor="@color/black"
         android:textColorHint="#000000"
         app:layout_constraintEnd_toEndOf="@+id/textView"
-        app:layout_constraintHorizontal_bias="0.49"
 
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -89,25 +88,25 @@
     <EditText
         android:id="@+id/edID"
 
+        android:layout_width="375dp"
+        android:layout_height="60dp"
         android:layout_marginTop="44dp"
+
+        android:background="@drawable/custumimput"
+        android:drawableStart="@drawable/idform"
         android:ems="10"
         android:hint="Id Carrera"
-
         android:inputType="textPersonName"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
+
+        android:textColor="@color/black"
+        android:textColorHint="#000000"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toEndOf="@+id/edNOMBRE"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/edNOMBRE"
         app:layout_constraintTop_toBottomOf="@+id/edNOMBRE"
-        app:layout_constraintVertical_bias="0.206"
-
-        android:background="@drawable/custumimput"
-        android:drawableStart="@drawable/idform"
-        android:paddingStart="12dp"
-        android:paddingEnd="12dp"
-        android:textColor="@color/black"
-        android:textColorHint="#000000"
-        android:layout_width="375dp"
-        android:layout_height="60dp"/>
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
