--- a/app/src/main/res/layout/activity_chequeo_clases.xml
+++ b/app/src/main/res/layout/activity_chequeo_clases.xml
@@ -14,25 +14,26 @@
         android:layout_width="273dp"
         android:layout_height="50dp"
         android:layout_marginStart="68dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/customspiner"
         app:layout_constraintEnd_toEndOf="@+id/textView3"
+        app:layout_constraintHorizontal_bias="0.435"
 
-        app:layout_constraintHorizontal_bias="0.429"
         app:layout_constraintStart_toStartOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/etclases" />
 
     <Spinner
         android:id="@+id/SpHORA"
         android:layout_width="273dp"
         android:layout_height="50dp"
         android:layout_marginTop="44dp"
-        android:background="@drawable/customspiner"
         app:layout_constraintEnd_toEndOf="@+id/SpAula"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/SpAula"
+        app:layout_constraintTop_toBottomOf="@+id/SpAula"
 
-        app:layout_constraintTop_toBottomOf="@+id/SpAula" />
+        android:background="@drawable/customspiner"
+        />
 
     <TextView
         android:id="@+id/textView3"
@@ -43,6 +44,21 @@
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="41dp"
+        android:layout_height="38dp"
+        android:layout_marginTop="92dp"
+        android:text="ID:"
+        android:textColor="@color/design_default_color_on_primary"
+        android:textSize="24sp"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.138"
+        app:layout_constraintStart_toStartOf="parent"
+
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -75,17 +91,17 @@
 
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="276dp"
-        android:layout_height="45dp"
+        android:layout_width="119dp"
+        android:layout_height="39dp"
 
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="420dp"
         android:text="OPCION DE CLASE:"
         android:textColor="@color/design_default_color_on_primary"
         android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="@+id/SpAction"
-        app:layout_constraintHorizontal_bias="0.428"
-        app:layout_constraintStart_toStartOf="@+id/SpAction"
-        app:layout_constraintTop_toTopOf="@+id/guideline13" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.421"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView8"
@@ -129,10 +145,8 @@
         app:layout_constraintBottom_toTopOf="@+id/guideline11"
 
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.569"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7"
-        app:layout_constraintVertical_bias="0.931" />
+        app:layout_constraintHorizontal_bias="0.615"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btnguardarclase"
@@ -144,17 +158,24 @@
         app:layout_constraintTop_toTopOf="@+id/guideline11"
         tools:layout_editor_absoluteX="148dp" />
 
+    <EditText
+        android:id="@+id/etclases"
+        android:layout_width="267dp"
+        android:layout_height="56dp"
+        android:layout_marginEnd="24dp"
+        android:background="@drawable/custumimput"
+        android:drawableStart="@drawable/idform"
+        android:ems="10"
+        android:hint="ID"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toBottomOf="@+id/textView4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textView4" />
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.77017784" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline13"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.5376197" />
 </androidx.constraintlayout.widget.ConstraintLayout>
